--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Changes to version 0.9.0:
+ * Added non blocking collective operations. 
+
 Changes to version 0.8.0:
 
 Introduced migration and utilities: 
