--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+Changes to version 0.9.2
+ * Ranks on same host communicate through unix sockets. 
+ * Support for Wtick and Wtime API functions.
+ * Fixed error in pupymark confusing indidual tests. 
+ * Fixed error in communicator inheritance.
+ * Support for X forwarding. 
+
+Changes to version 0.9.1:
+ * Better handling of logging parameters.
+ * Possible for users to specify a settings module.
+
 Changes to version 0.9.0:
  * Added non blocking collective operations. 
 
@@ -29,7 +40,6 @@ Changes to version 0.7.1:
 Changes to version 0.7.0:
 
 * Implemented use of poll and epoll (Linux only)
-* Added initial support for Kqueue (*BSD only)
 
 Changes to version 0.6:
 
