--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Changes to version 0.9.5
+ * By receiving directly into buffers and sending from buffers pupyMPI
+   does not pickle when sending numpy types or bytearrays. 
+
 Changes to version 0.9.4
  * Allreduce and reduce performance gain due to new element wise reduction
    (special focus on NumPy)
